@@ -4,6 +4,7 @@
 
 === 1.0.3 ===
 - Updated plugin metadata (contributed by Dennis Braun).
+- Added system::sleep_msec function for millisecond-precise sleeps.
 
 === 1.0.2 ===
 * Updated build scripts.
